Fix: scrollbars in mobile FF

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ body, html {
   margin: 0;
   font-family: 'Noto Sans Display', sans-serif;
   font-size: 2vmin;
+  overflow: hidden;
 }
 
 body {
